tests/ui/feature-gates/feature-gate-f16.rs
const A: f16 = 10.0;

pub fn main() {
    let a: f16 = 100.0;
    let b = 0.0f16;
    foo(1.23);
}

fn foo(a: f16) {}

struct Bar {
    a: f16,
}
